# VqeOptimization

./: .gitignore  README.md  fit_lagrange.py  main_H2O.py  mkdocs.yml  pyproject.toml  simple_knitting.py  test_tfim.py  test_tfim_window_optimized.py  test_window.py  tfim_trotter.py
.github/workflows/: docs.yml
docs/: api.md  changelog.md  contributing.md  features.md  index.md  installation.md  quickstart.md
docs/examples/: overview.md
docs/javascripts/: mathjax.js
hamiltonians/: __init__.py  base.py  chemistry.py  tfim.py
runners/: common.py  run_benchmark.py  run_hardware.py  run_simulation.py  run_tfim_scan.py
tests/: test_tfim.py
